force-app/zurich-base/main/default/objects/AuthMapping__mdt/AuthMapping__mdt.object-meta.xml
<CustomObject>
    <description>The auth data configuration for the IAM and OpenIDConnectRegHandler class to use</description>
    <label>AuthMapping</label>
    <pluralLabel>AuthMappings</pluralLabel>
</CustomObject>