force-app/zurich-base/main/default/objects/AuthMapping__mdt/fields/IsCommunity__c.field-meta.xml
<CustomField>
    <fullName>IsCommunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el registro pertenece a un login de comunidad</description>
    <label>Is Community</label>
    <type>Checkbox</type>
</CustomField>