force-app/zurich-base/main/default/objects/AuthMapping__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>If there are more than one type of permission for a rol, the order will tell which one to choose first. From 0 to N.
For example if one roles has profile admin and another rol has profile normal user, the admin profile will have a lower order.</description>
    <label>Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>