force-app/zurich-base/main/default/objects/AuthMapping__mdt/fields/Permission__c.field-meta.xml
<CustomField>
    <fullName>Permission__c</fullName>
    <description>The corresponding name of the permission in Salesforce. The name can be for a profile, public group, role, call center or permission set group. For the Administrator profile user &quot;SystemAdmin&quot; as value.</description>
    <label>Permission</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>