force-app/zurich-base/main/default/objects/AuthMapping__mdt/fields/Permission_Type__c.field-meta.xml
<CustomField>
    <fullName>Permission_Type__c</fullName>
    <description>What type of permission in Salesforce is the Permission name referencing to</description>
    <label>Permission Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Profile</fullName>
                <default>true</default>
                <label>Profile</label>
            </value>
            <value>
                <fullName>PublicGroup</fullName>
            </value>
            <value>
                <fullName>CallCenter</fullName>
            </value>
            <value>
                <fullName>PermissionSetGroup</fullName>
            </value>
            <value>
                <fullName>Role</fullName>
            </value>
            <value>
                <fullName>Department</fullName>
            </value>
            <value>
                <fullName>Signature</fullName>
            </value>
            <value>
                <fullName>Title</fullName>
            </value>
            <value>
                <fullName>UserPermission</fullName>
            </value>
            <value>
                <fullName>AffiliationCode</fullName>
            </value>
            <value>
                <fullName>LicenseGroup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>