force-app/zurich-base/main/default/objects/AuthMapping__mdt/fields/Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Role_Name__c</fullName>
    <description>The name of the role that comes form IAM oneLogin openId connect</description>
    <label>Role Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>