force-app/zurich-base/main/default/objects/AuthMapping__mdt/fields/User_Permision_Value__c.field-meta.xml
<CustomField>
    <fullName>User_Permision_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Permission Value</label>
    <type>Checkbox</type>
</CustomField>